--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -97,9 +97,9 @@
 Пример: фрагмент кода
 
 <!-- ОФОРМИТЕ ФРАГМЕНТ ТАК, ЧТОБЫ ОН ВЫДАВАЛСЯ НА ЭКРАН ИМЕННО В ТАКОМ ВИДЕ, КАК СТОИТ В КОДЕ: -->
-&lt;h2 class=&quot;center&quot;&gt;<p>
-Голландская фирма Horns&amp;amp;Hoofs запустила online-магазин<p>
-&lt;/h2&gt;
+<p>&lt;h2 class=&quot;center&quot;&gt;
+<p>Голландская фирма Horns&amp;amp;Hoofs запустила online-магазин<p>
+<p>&lt;/h2&gt;</p>
 
 <!---------------------------------------------------------------------------->
     <h2>3. Элементы строчного уровня (inline elements)</h2>
