--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -108,10 +108,10 @@
 
 <!-- ИСПОЛЬЗУЙТЕ РАЗНЫЕ СПОСОБЫ ВЫДЕЛЕНИЯ ТЕКСТА -->
     <h4>3.1.1. Изменение размера и положения текста</h4>
-Формула расчета энергии:
-E=mc2
-Химическая формула воды
-H2O
+        <p align="center">Формула расчета энергии: </p>
+        <p><big>E=mc2</big></p>
+        <p align="right"><small>Химическая формула воды</small></p>
+        <p align="left"><big><big>H2O</big></big></p>
 
     <h4>3.1.2. Изменение начертания и гарнитуры</h4>
 i: Используется для текста, который по разным причинам отличается от обычного текста
