--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -114,9 +114,9 @@
         <p align="left"><big><big>H2O</big></big></p>
 
     <h4>3.1.2. Изменение начертания и гарнитуры</h4>
-i: Используется для текста, который по разным причинам отличается от обычного текста
-b: Используется для привлечения внимания к тексту, не указывая на то, что это более важно
-u: Используется для разметки текста, который должен отличаться стилистически от обычного текста
+        <p><font face="Arial"><i>i: Используется для текста, который по разным причинам отличается от обычного текста</i></font></p>
+        <p><font face="Times New Roman"><b>b: Используется для привлечения внимания к тексту, не указывая на то, что это более важно</b></font></p>
+        <p><font face="Calibri"><u>u: Используется для разметки текста, который должен отличаться стилистически от обычного текста</u></font></p>
 
     <h4>3.1.3. Смысловые элементы («phrase elements»)</h4>
 em: Предназначен для текста, имеющего особое значение или на который следует сделать акцент
