--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -101,35 +101,31 @@
 <p>Голландская фирма Horns&amp;amp;Hoofs запустила online-магазин<p>
 <p>&lt;/h2&gt;</p>
 
-<!---------------------------------------------------------------------------->
+<!-- -->
     <h2>3. Элементы строчного уровня (inline elements)</h2>
 
     <h3>3.1. Непосредственное и логическое форматирование текста</h3>
 
 <!-- ИСПОЛЬЗУЙТЕ РАЗНЫЕ СПОСОБЫ ВЫДЕЛЕНИЯ ТЕКСТА -->
     <h4>3.1.1. Изменение размера и положения текста</h4>
-        <p align="center">Формула расчета энергии: </p>
-        <p><big>E=mc2</big></p>
-        <p align="right"><small>Химическая формула воды</small></p>
-        <p align="left"><big><big>H2O</big></big></p>
+        <p>Формула расчета энергии: 
+        E=mc<sup>2</sup></p>
+        <p>Химическая формула воды: H<sub>2</sub>O</p>
 
     <h4>3.1.2. Изменение начертания и гарнитуры</h4>
-        <p><font face="Arial"><i>i: Используется для текста, который по разным причинам отличается от обычного текста</i></font></p>
-        <p><font face="Times New Roman"><b>b: Используется для привлечения внимания к тексту, не указывая на то, что это более важно</b></font></p>
-        <p><font face="Calibri"><u>u: Используется для разметки текста, который должен отличаться стилистически от обычного текста</u></font></p>
+        <p><i>i: Используется для текста, который по разным причинам отличается от обычного текста</i></p>
+        <p><b>b: Используется для привлечения внимания к тексту, не указывая на то, что это более важно</b></p>
+        <p><u>u: Используется для разметки текста, который должен отличаться стилистически от обычного текста</u></p>
 
     <h4>3.1.3. Смысловые элементы («phrase elements»)</h4>
-em: Предназначен для текста, имеющего особое значение или на который следует сделать акцент
-strong: Элемент сильной значимости указывает на то, что его содержание имеет большое значение, серьезность или срочность
-cite: Цитата или ссылка на другие ресурсы
-code: Фрагмент компьютерного кода
+        <p><em>em: Предназначен для текста, имеющего особое значение или на который следует сделать акцент </em></p>
+        <p><strong>strong: Элемент сильной значимости указывает на то, что его содержание имеет большое значение, серьезность или срочность</strong></p>
+        <p><cite>cite: Цитата или ссылка на другие ресурсы</cite></p>
+        <p><code>code: Фрагмент компьютерного кода</code></p>
 
 <!-- ДОБАВЬТЕ ГОРИЗОНТАЛЬНУЮ ЛИНИЮ HR -->
+<hr>
 
 Перепечатка материала не преследуется по закону
 </body>
 </html>
-
-
-
-
