--- a/lab1/lab1_1.html
+++ b/lab1/lab1_1.html
@@ -98,7 +98,7 @@
 
 <!-- ОФОРМИТЕ ФРАГМЕНТ ТАК, ЧТОБЫ ОН ВЫДАВАЛСЯ НА ЭКРАН ИМЕННО В ТАКОМ ВИДЕ, КАК СТОИТ В КОДЕ: -->
 <p>&lt;h2 class=&quot;center&quot;&gt;
-<p>Голландская фирма Horns&amp;amp;Hoofs запустила online-магазин<p>
+<p>Голландская фирма Horns&amp;amp;Hoofs запустила online-магазин</p>
 <p>&lt;/h2&gt;</p>
 
 <!-- -->
