--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -7,11 +7,11 @@
 <body>
 <h1>Ссылки</h1>
 <nav>
-Как сделать ссылку
-Цвет ссылок
-Атрибут target
-Изображение в качестве ссылки
-Ссылки внутри страницы
+<li><a href="#one">Как сделать ссылку</a></li>
+<li><a href="#two">Цвет ссылок</a></li>
+<li><a href="#three">Атрибут target</a></li>
+<li><a href="#four">Изображение в качестве ссылки</a></li>
+<li><a href="#five">Ссылки внутри страницы</a></li>
 </nav>
 
 <p><b>Гиперссылка</b> (англ.&#160;<i>hyperlink</i>) в компьютерной терминологии&#160;— часть гипертекстового документа, ссылающаяся на другой элемент (команда, текст, заголовок, примечание, изображение) в самом документе, на другой объект (файл, директория, приложение), расположенный на локальном диске или в компьютерной сети, либо на элементы этого объекта.</p>
@@ -20,7 +20,7 @@
 
 <hr>
 
-<h2>Как сделать ссылку</h2>
+<h2 id="one">Как сделать ссылку</h2>
 <p>Для создания ссылки необходимо сообщить браузеру, что является 
   ссылкой, а также указать адрес документа, на который следует сделать 
   ссылку. Оба действия выполняются с помощью тега <code>&lt;a&gt;</code>, 
@@ -87,7 +87,7 @@
 
 <hr>
 
-<h2>Цвет ссылок</h2>
+<h2 id="two">Цвет ссылок</h2>
 <p>Цвета ссылок задаются в качестве атрибутов тега <code>&lt;body&gt;</code>. 
  Атрибуты являются необязательными и если они не указаны используются 
   значения по умолчанию.</p>
@@ -126,7 +126,7 @@
 
 <hr>
 
-<h2>Атрибут target</h2>
+<h2 id="three">Атрибут target</h2>
 <p>По умолчанию, при переходе по ссылке документ открывается в текущем окне или 
   фрейме. При необходимости, это условие может быть изменено атрибутом <code>target</code> 
   тега <code>&lt;a&gt;</code>. Этот атрибут может принимать следующие 
@@ -200,7 +200,7 @@
 
 <hr>
 
-<h2>Изображение в качестве ссылки</h2>
+<h2 id="four">Изображение в качестве ссылки</h2>
 <p>Кроме текста, в качестве ссылок можно использовать и рисунки. Изображение в 
   этом случае надо поместить между тегами <code>&lt;a&gt;</code> 
   и <code>&lt;/a&gt;</code>, как показано в примере&nbsp;7.</p>
@@ -246,7 +246,7 @@
 
 <hr>
 
-<h2>Ссылки внутри страницы</h2>
+<h2 id="five">Ссылки внутри страницы</h2>
 <p>
 Якорем называется закладка с уникальным именем на определённом месте веб-страницы, предназначенная для перехода к ней по ссылке. Якоря удобно применять в документах большого объёма, чтобы можно было быстро переходить к нужному разделу.
 </p>
