--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -7,11 +7,11 @@
 <body>
 <h1>Ссылки</h1>
 <nav>
-<li><a href="#one">Как сделать ссылку</a></li>
-<li><a href="#two">Цвет ссылок</a></li>
-<li><a href="#three">Атрибут target</a></li>
-<li><a href="#four">Изображение в качестве ссылки</a></li>
-<li><a href="#five">Ссылки внутри страницы</a></li>
+<a href="#one">Как сделать ссылку</a>
+<a href="#two">Цвет ссылок</a>
+<a href="#three">Атрибут target</a>
+<a href="#four">Изображение в качестве ссылки</a>
+<a href="#five">Ссылки внутри страницы</a>
 </nav>
 
 <p><b>Гиперссылка</b> (англ.&#160;<i>hyperlink</i>) в компьютерной терминологии&#160;— часть гипертекстового документа, ссылающаяся на другой элемент (команда, текст, заголовок, примечание, изображение) в самом документе, на другой объект (файл, директория, приложение), расположенный на локальном диске или в компьютерной сети, либо на элементы этого объекта.</p>
