--- a/lab1/lab1_2.html
+++ b/lab1/lab1_2.html
@@ -8,11 +8,11 @@
 <h1>Ссылки</h1>
 <nav>
   <ul>
-    <a href="#one">Как сделать ссылку</a>
-    <a href="#two">Цвет ссылок</a>
-    <a href="#three">Атрибут target</a>
-    <a href="#four">Изображение в качестве ссылки</a>
-    <a href="#five">Ссылки внутри страницы</a>
+    <li><a href="#one">Как сделать ссылку</a></li>
+    <li><a href="#two">Цвет ссылок</a></li>
+    <li><a href="#three">Атрибут target</a></li>
+    <li><a href="#four">Изображение в качестве ссылки</a></li>
+    <li><a href="#five">Ссылки внутри страницы</a></li>
   </ul>
 </nav>
 
