lab1_4.html pravka1

--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<title>Изображения</title>
@@ -58,9 +59,9 @@
 				<source srcset="images/mushroom_landscape.jpg" media="(max-width: 40em) and (orientation: landscape)">
 				<source srcset="images/mushroom_portrait.jpg" media="(max-width: 40em) and (orientation: portrait)">
 				<source srcset="images/mushroom_retina.jpg" media="(max-width: 40em) and (orientation: retina)">
-				<img srcset="images/mushroom.jpg" alt="гриб">
-				<figcaption>Гриб</figcaption>
+				<img src="images/mushroom.jpg" alt="гриб">
 			</picture>
+				<figcaption>Гриб</figcaption>
 			<img src="images/redcat.jpg" alt="redcat">
 				<figcaption>Кошка</figcaption>
 			<img src="images/slon.png" alt="slon.png">
