--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <title>Карта-изображение</title>
      </head>
+    <body>
     <img src="lab1_5_files/map.png" usemap="#image-map">
     <map name="image-map">
     <area alt="lab1_1" title="lab1_1" href="lab1_1.html" coords="9,9,147,98" shape="rect">
