--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Лабораторные работы</h1>
+        <h2>Лабораторная 1</h2>
+        <nav>
+            <ul>
+              <li><a href="lab1_1.html">lab1-1</a></li>
+              <li><a href="lab1_2.html">lab1-2</a></li>
+              <li><a href="lab1_3/doc1.html">lab1-3</a></li>
+              <li><a href="lab1_4.html">lab1-4</a></li>
+              <li><a href="lab1_5.html">lab1-5</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
