--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h2>Лабораторная 1</h2>
         <nav>
             <ul>
-              <li><a href="lab1_1.html">lab1-1</a></li>
-              <li><a href="lab1_2.html">lab1-2</a></li>
-              <li><a href="lab1_3/doc1.html">lab1-3</a></li>
-              <li><a href="lab1_4.html">lab1-4</a></li>
-              <li><a href="lab1_5.html">lab1-5</a></li>
+              <li><a href="lab1/lab1_1.html">lab1-1</a></li>
+              <li><a href="lab1/lab1_2.html">lab1-2</a></li>
+              <li><a href="lab1/lab1_3/doc.html">lab1-3</a></li>
+              <li><a href="lab1/lab1_4.html">lab1-4</a></li>
+              <li><a href="lab1/lab1_5.html">lab1-5</a></li>
             </ul>
         </nav>
 </body>
