--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
               <li><a href="lab1/lab1_5.html">lab1-5</a></li>
             </ul>
         </nav>
+        <h2>Лабораторная 2</h2>
+        <nav>
+            <ui>
+                <li><a href="lab2/lab2_1.html">lab2-1</a></li>
+            </ui>
+        </nav>
 </body>
 </html>
