--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <nav>
             <ui>
                 <li><a href="lab2/lab2_1.html">lab2-1</a></li>
+                <li><a href="lab2/lab2_2.html">lab2-2</a></li>
             </ui>
         </nav>
 </body>
