--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="lab2/lab2_1.html">lab2-1</a></li>
                 <li><a href="lab2/lab2_2.html">lab2-2</a></li>
                 <li><a href="lab2/lab2_3/index.html">lab2-3</a></li>
+                <li><a href="lab2/lab2_4.html">lab2-4</a></li>
             </ul>
         </nav>
 </body>
