--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -24,11 +24,11 @@
 4. Добавьте подпись к карте
  -->
 <figure>
-<iframe width="800" height="600" src="https://www.youtube.com/embed/t6NIAlyQ15k" title="Физико-математический факультет" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="800" height="600" src="https://www.youtube.com/embed/t6NIAlyQ15k" title="Физико-математический факультет" allowfullscreen></iframe>
 <figcaption>Youtube видео</figcaption>
 </figure>
 <figure>
-<iframe name="yandexmap" width="1920" height="1080" src="https://yandex.ru/maps/10/orel/?from=api-maps&ll=36.063909%2C52.951255&mode=search&oid=1030860442&ol=biz&utm_source=api-maps&z=17"></iframe>
+<iframe name="yandexmap" width="1920" height="1080" src="https://yandex.ru/maps/10/orel/?from=api-maps&amp;ll=36.063909%2C52.951255&amp;mode=search&amp;oid=1030860442&amp;ol=biz&amp;utm_source=api-maps&amp;z=17"></iframe>
 <figcaption>Yandex карта</figcaption>
 </figure>
 </body>
