--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="lab2/lab2_2.html">lab2-2</a></li>
                 <li><a href="lab2/lab2_3/index.html">lab2-3</a></li>
                 <li><a href="lab2/lab2_4.html">lab2-4</a></li>
+                <li><a href="lab2/lab2_5.html">lab2-5</a></li>
             </ul>
         </nav>
 </body>
