--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -20,7 +20,7 @@
             <p><input type="checkbox" name="language"> Китайский</p>
         </div>
     </p>
-    <p><textarea cols="50" rows="6"> Напишите о себе</textarea></p>
+    <p><textarea cols="50" rows="6" placeholder="Напишите о себе"></textarea></p>
     <p><input type="button" value="Готово"> <input type="button" value="Очистить"></p>
 </form>
 </body>
