--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -45,16 +45,28 @@
         <figure>
             <img src="images/aquaria.jpg" alt="Черепаха">
                 <figcaption>Черепаха</figcaption>
+		</figure>
+		<figure>
             <img src="images/globus.gif" alt="Глобус">
                 <figcaption>Глобус</figcaption>
+		</figure>
+		<figure>
             <img src="images/html5-logo.png" alt="logo png" width="200" height="212">
-                <figcaption>Лого png</figcaption> 
+                <figcaption>Лого png</figcaption>
+		</figure>
+		<figure> 
             <img src="images/html5-logo.svg" alt="logo svg" width="310" height="140">
                 <figcaption>Лого svg</figcaption> 
-            <img src="images/light.gif" alt="Свеча">
+		</figure>
+		<figure>    
+			<img src="images/light.gif" alt="Свеча">
             	<figcaption>Свеча</figcaption>
+		</figure>
+		<figure>	
 			<img src="images/muscle.png" alt="muscle">
 				<figcaption>Мускулы</figcaption>
+		</figure>
+		<figure>
 			<picture>
 				<source srcset="images/mushroom_landscape.jpg" media="(max-width: 40em) and (orientation: landscape)">
 				<source srcset="images/mushroom_portrait.jpg" media="(max-width: 40em) and (orientation: portrait)">
@@ -62,11 +74,15 @@
 				<img src="images/mushroom.jpg" alt="гриб">
 			</picture>
 				<figcaption>Гриб</figcaption>
-			<img src="images/redcat.jpg" alt="redcat">
+		</figure>
+		<figure>
+				<img src="images/redcat.jpg" alt="redcat">
 				<figcaption>Кошка</figcaption>
+		</figure>
+		<figure>
 			<img src="images/slon.png" alt="slon.png">
 				<figcaption>Слон</figcaption>
-        </figure>
+		</figure>
 	</section>
 </body>
 </html>
