--- a/lab1/lab1_4.html
+++ b/lab1/lab1_4.html
@@ -70,7 +70,7 @@
 			<picture>
 				<source srcset="images/mushroom_landscape.jpg" media="(max-width: 40em) and (orientation: landscape)">
 				<source srcset="images/mushroom_portrait.jpg" media="(max-width: 40em) and (orientation: portrait)">
-				<source srcset="images/mushroom_retina.jpg" width="250" height="100">
+				<source srcset="images/mushroom_retina.jpg 2x">
 				<img src="images/mushroom.jpg" alt="гриб">
 			</picture>
 				<figcaption>Гриб</figcaption>
