--- a/lab1/lab1_5.html
+++ b/lab1/lab1_5.html
@@ -5,7 +5,7 @@
       <title>Карта-изображение</title>
      </head>
     <body>
-    <img src="lab1_5_files/map.png" usemap="#image-map">
+    <img src="lab1_5_files/map.png" usemap="#image-map" alt="map">
     <map name="image-map">
     <area alt="lab1_1" title="lab1_1" href="lab1_1.html" coords="9,9,147,98" shape="rect">
     <area alt="lab1_2" title="lab1_2" href="lab1_2.html" coords="159,10,295,97" shape="rect">
