Фикс списков для валидатора

--- a/lab2/lab2_1.html
+++ b/lab2/lab2_1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <meta charset="utf-8">
 <title>Списки</title>
 </head>
 <body>
     <ul>
-        <li>Курсы </li>
+        <li>Курсы 
     <ol>
-	    <li>Каталог курсов</li>
+	    <li>Каталог курсов
         <dl>
 		<dt>Курсы для пользователей</dt>
 			<dd>Компьютерные курсы для начинающих, Office 2003, Курсы для продвинутых пользователей</dd>
@@ -18,20 +18,20 @@
 			<dd>Интернет, PHP, Web-мастеринг, Web-дизайн, Flash</dd>
 		<dt>Компьютерная графика, верстка, дизайн</dt>
 			<dd>Photoshop, CorelDRAW, QuarkXPress, InDesign</dd>
-        </dl>
+        </dl></li>
 	<li>Дистанционное обучение</li>
 	<li>Запись на курсы</li>
 	<li>Расписание курсов</li>
 	<li>Экзамены</li>
 	<li>Документы об окончании</li>
-    </ol>
+    </ol></li>
 
-<li>Специальные предложения</li>
+<li>Специальные предложения
     <ol type="a">
 	<li>Скидки</li>
 	<li>Обучение в кредит</li>
-	<li>Бесплатные занятия для наших слушателей</
-    </ol>
+	<li>Бесплатные занятия для наших слушателей</li>
+    </ol></li>
 </ul>
 </body>
 </html>
