--- a/lab2/lab2_3/index.html
+++ b/lab2/lab2_3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <meta charset="utf-8">
 <title>Организация фреймовой структуры</title>
 </head>
 <body>
-    <iframe name="menu" src="menu.html" height="1080px" width="200px"></iframe>
-    <iframe name="content" height="1080px" width="800px"></iframe>
+    <iframe name="menu" src="menu.html" height="1080" width="200"></iframe>
+    <iframe name="content" height="1080" width="800"></iframe>
 </body>
 </html>
