--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
                 <li><a href="lab2/lab2_5.html">lab2-5</a></li>
             </ul>
         </nav>
+        <h2>Лабораторная 3</h2>
+        <nav>
+            <ul>
+                <li><a href="lab3/lab3_1.html">lab3-1</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
