--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <nav>
             <ul>
                 <li><a href="lab3/lab3_1.html">lab3-1</a></li>
+                <li><a href="lab3/lab3_2.html">lab3-2</a></li>
             </ul>
         </nav>
 </body>
