--- a/lab3/lab3_1.html
+++ b/lab3/lab3_1.html
@@ -13,7 +13,7 @@
     }
     h1, h2 {
         text-align: right;
-        font-family: Arial sans-serif;
+        font-family: Arial, sans-serif;
         color: red;
     }
     em {
