--- a/lab3/lab3_2.html
+++ b/lab3/lab3_2.html
@@ -5,7 +5,7 @@
 <title>Стили</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: white; color: black;">
 <h1>Приватные и публичные программы</h1>
 <hr>
 <h2>Приватные программы</h2>
