--- a/lab3/lab3_2.html
+++ b/lab3/lab3_2.html
@@ -4,6 +4,30 @@
 <meta charset="utf-8">
 <title>Стили</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto:ital@1&display=swap" rel="stylesheet">
+<style>
+    body {
+        background: url(fon.jpg) repeat;
+    }
+    h1, h2 {
+        font-family: 'Roboto', sans-serif;
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+    strong {
+        font-family: 'Caveat', cursive;
+    }
+    em {
+        padding-right: 5px;
+        border-bottom: double;
+		
+    }
+    p {
+        margin-bottom: 25px;
+    }
+</style>
 </head>
 <body style="background-color: white; color: black;">
 <h1>Приватные и публичные программы</h1>
