--- a/lab3/lab3_2.html
+++ b/lab3/lab3_2.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat&amp;family=Roboto:ital@1&amp;display=swap" rel="stylesheet">
 <style>
     body {
         background: url(fon.jpg) repeat;
