Добавил reset.css

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <ul>
                 <li><a href="lab3/lab3_1.html">lab3-1</a></li>
                 <li><a href="lab3/lab3_2.html">lab3-2</a></li>
+                <li><a href="lab3/lab3_reset-css.html">lab3-reset-css</a></li>
             </ul>
         </nav>
 </body>
