--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -51,19 +51,19 @@
         </tr>
         <tr>
             <td>
-                <input type="checkbox" name="language" id="Deutsche">
+                <input type="checkbox" name="Deutsche" id="Deutsche">
                     <label for="Deutsche">Немецкий</label>
             </td>
         </tr>
         <tr>
             <td>
-                <input type="checkbox" name="language" id="English">
+                <input type="checkbox" name="English" id="English">
                     <label for="English">Английский</label>
             </td>
         </tr>
         <tr>
             <td>
-                <input type="checkbox" name="language" id="Chinese">
+                <input type="checkbox" name="Chinese" id="Chinese">
                     <label for="Chinese">Китайский</label>
             </td>
         </tr>
