--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li><a href="lab3/lab3_1.html">lab3-1</a></li>
                 <li><a href="lab3/lab3_2.html">lab3-2</a></li>
                 <li><a href="lab3/lab3_reset-css.html">lab3-reset-css</a></li>
+                <li><a href="lab3/lab3_normalize-css.html">lab3-normalize-css</a></li>
             </ul>
         </nav>
 </body>
