--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
                 <li><a href="lab3/lab3_normalize-css.html">lab3-normalize-css</a></li>
             </ul>
         </nav>
+        <h2>Лабораторная 4</h2>
+        <nav>
+            <ul>
+                <li><a href="lab4/lab4_1.html">lab4-1</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
