--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <nav>
             <ul>
                 <li><a href="lab4/lab4_1.html">lab4-1</a></li>
+                <li><a href="lab4/lab4_2.html">lab4-2</a></li>
             </ul>
         </nav>
 </body>
