--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <ul>
                 <li><a href="lab4/lab4_1.html">lab4-1</a></li>
                 <li><a href="lab4/lab4_2.html">lab4-2</a></li>
+                <li><a href="lab4/lab4_3.html">lab4-3</a></li>
             </ul>
         </nav>
 </body>
