--- a/lab4/lab4_3.html
+++ b/lab4/lab4_3.html
@@ -28,7 +28,7 @@
 		}
 		
 		.bg-minus::before {
-			position: absolute;
+			float: left;
 			content: '';
 			width: 16px;
 			height: 16px;
@@ -44,7 +44,8 @@
 		}
 
 		.bg-point::before {
-			position: absolute;
+			/* position: absolute; */
+			float: left;
 			content: '';
 			width: 16px;
 			height: 16px;
