--- a/lab4/lab4_4.html
+++ b/lab4/lab4_4.html
@@ -36,33 +36,33 @@
 		<ul>
 			<li><i class="fa-regular fa-square-minus"></i><a href="#">Фильмы</a>
 				<ul>
-					<li><i class="fa-regular fa-square"></i><a href="#">Экшн</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Мелодрамы</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Сериалы</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Семейные</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Экшн</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Мелодрамы</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Сериалы</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Семейные</a></li>
 				</ul>
 			</li>
 			<li><i class="fa-regular fa-square-minus"></i><a href="#">Музыка</a>
 				<ul>
-					<li><i class="fa-regular fa-square"></i><a href="#">Классика</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Джаз</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Рок</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Грандж</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Классика</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Джаз</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Рок</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Грандж</a></li>
 				</ul>
 			</li>
 			<li><i class="fa-regular fa-square-minus"></i><a href="#">Софт</a>
 				<ul>
-					<li><i class="fa-regular fa-square"></i><a href="#">Графика</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">3D-моделирование</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Машинопись</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Переводчики</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Графика</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">3D-моделирование</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Машинопись</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Переводчики</a></li>
 				</ul>
 			</li>
 			<li><i class="fa-regular fa-square-minus"></i><a href="#">Игры</a>
 				<ul>
-					<li><i class="fa-regular fa-square"></i><a href="#">РПГ</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Шутеры</a></li>
-					<li><i class="fa-regular fa-square"></i><a href="#">Пасьянсы</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">РПГ</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Шутеры</a></li>
+					<li><span class="fa-regular fa-square"></span><a href="#">Пасьянсы</a></li>
 				</ul>
 			</li>
 		</ul>
