--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -16,12 +16,12 @@
 <form action="#">
     <table>
         <tr>
-            <td>E-mail:</td>
-            <td><input type="email" name="login" placeholder="Введите e-mail" required></td>
+            <td><label for="email">E-mail</label>:</td>
+            <td><input type="email" id="email" name="login" placeholder="Введите e-mail" required></td>
         </tr>
         <tr>
-            <td>Пароль:</td>
-            <td><input type="password" name="password" placeholder="Введите пароль" required></td>
+            <td><label for="password">Пароль</label>:</td>
+            <td><input type="password" id="password" name="password" placeholder="Введите пароль" required></td>
         </tr>
         <tr>
             <td>Пол:</td>
