--- a/lab4/lab4_4.html
+++ b/lab4/lab4_4.html
@@ -34,35 +34,35 @@
 <body>
 	<nav class="menu">
 		<ul>
-			<li><i class="fa-regular fa-square-minus"></i><a href="#">Фильмы</a>
+			<li><i class="fa-regular fa-square-minus"><a href="#">Фильмы</a></i>
 				<ul>
-					<li><span class="fa-regular fa-square"></span><a href="#">Экшн</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Мелодрамы</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Сериалы</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Семейные</a></li>
+					<li><i class="fa-regular fa-square"><a href="#">Экшн</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Мелодрамы</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Сериалы</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Семейные</a></i></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"></i><a href="#">Музыка</a>
+			<li><i class="fa-regular fa-square-minus"><a href="#">Музыка</a></i>
 				<ul>
-					<li><span class="fa-regular fa-square"></span><a href="#">Классика</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Джаз</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Рок</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Грандж</a></li>
+					<li><i class="fa-regular fa-square"><a href="#">Классика</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Джаз</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Рок</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Грандж</a></i></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"></i><a href="#">Софт</a>
+			<li><i class="fa-regular fa-square-minus"><a href="#">Софт</a></i>
 				<ul>
-					<li><span class="fa-regular fa-square"></span><a href="#">Графика</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">3D-моделирование</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Машинопись</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Переводчики</a></li>
+					<li><i class="fa-regular fa-square"><a href="#">Графика</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">3D-моделирование</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Машинопись</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Переводчики</a></i></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"></i><a href="#">Игры</a>
+			<li><i class="fa-regular fa-square-minus"><a href="#">Игры</a></i>
 				<ul>
-					<li><span class="fa-regular fa-square"></span><a href="#">РПГ</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Шутеры</a></li>
-					<li><span class="fa-regular fa-square"></span><a href="#">Пасьянсы</a></li>
+					<li><i class="fa-regular fa-square"><a href="#">РПГ</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Шутеры</a></i></li>
+					<li><i class="fa-regular fa-square"><a href="#">Пасьянсы</a></i></li>
 				</ul>
 			</li>
 		</ul>
