--- a/lab4/lab4_4.html
+++ b/lab4/lab4_4.html
@@ -11,7 +11,7 @@
 		}
 
 		.menu {
-			width: 200px;
+			width: 300px;
 			background: #fff;
 		}
 
@@ -34,35 +34,35 @@
 <body>
 	<nav class="menu">
 		<ul>
-			<li><i class="fa-regular fa-square-minus"><a href="#">Фильмы</a></i>
+			<li><i class="fa-regular fa-square-minus"></i> <a href="#">Фильмы</a>
 				<ul>
-					<li><i class="fa-regular fa-square"><a href="#">Экшн</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Мелодрамы</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Сериалы</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Семейные</a></i></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Экшн</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Мелодрамы</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Сериалы</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Семейные</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"><a href="#">Музыка</a></i>
+			<li><i class="fa-regular fa-square-minus"></i> <a href="#">Музыка</a>
 				<ul>
-					<li><i class="fa-regular fa-square"><a href="#">Классика</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Джаз</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Рок</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Грандж</a></i></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Классика</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Джаз</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Рок</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Грандж</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"><a href="#">Софт</a></i>
+			<li><i class="fa-regular fa-square-minus"></i> <a href="#">Софт</a>
 				<ul>
-					<li><i class="fa-regular fa-square"><a href="#">Графика</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">3D-моделирование</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Машинопись</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Переводчики</a></i></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Графика</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">3D-моделирование</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Машинопись</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Переводчики</a></li>
 				</ul>
 			</li>
-			<li><i class="fa-regular fa-square-minus"><a href="#">Игры</a></i>
+			<li><i class="fa-regular fa-square-minus"> </i><a href="#">Игры</a>
 				<ul>
-					<li><i class="fa-regular fa-square"><a href="#">РПГ</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Шутеры</a></i></li>
-					<li><i class="fa-regular fa-square"><a href="#">Пасьянсы</a></i></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">РПГ</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Шутеры</a></li>
+					<li><i class="fa-regular fa-circle-dot"></i> <a href="#">Пасьянсы</a></li>
 				</ul>
 			</li>
 		</ul>
