Изменил на button

--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -71,7 +71,7 @@
             <td colspan="2"><textarea cols="50" rows="6" placeholder="Напишите о себе"></textarea></td>
         </tr>
         <tr>
-            <td colspan="2"><input type="submit" value="Готово"> <input type="reset" value="Очистить"></td>
+            <td colspan="2"><button type="submit">Готово</button> <button type="reset">Очистить</button></td>
         </tr>
     </table>
 </form>
