--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="lab4/lab4_2.html">lab4-2</a></li>
                 <li><a href="lab4/lab4_3.html">lab4-3</a></li>
                 <li><a href="lab4/lab4_4.html">lab4-4</a></li>
+                <li><a href="lab4/lab4_5.html">lab4-5</a></li>
             </ul>
         </nav>
 </body>
