--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
                 <li><a href="lab4/lab4_5.html">lab4-5</a></li>
             </ul>
         </nav>
+        <h2>Лабораторная 5</h2>
+        <nav>
+            <ul>
+                <li><a href="lab4/lab5_1.html">lab5-1</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
