--- a/lab5/lab5_1.html
+++ b/lab5/lab5_1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -32,7 +32,7 @@
         <li><a href="#">Пункт 3</a></li>
         <li><a href="#">Пункт 4</a></li>
         <li><a href="#">Пункт 5</a></li>
-        <ul>
+    </ul>
 </body>
 
 </html>
