--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <nav>
             <ul>
                 <li><a href="lab5/lab5_1.html">lab5-1</a></li>
+                <li><a href="lab5/lab5_2.html">lab5-2</a></li>
             </ul>
         </nav>
 </body>
