--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <ul>
                 <li><a href="lab5/lab5_1.html">lab5-1</a></li>
                 <li><a href="lab5/lab5_2.html">lab5-2</a></li>
+                <li><a href="lab5/lab5_3.html">lab5-3</a></li>
             </ul>
         </nav>
 </body>
