--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li><a href="lab5/lab5_2.html">lab5-2</a></li>
                 <li><a href="lab5/lab5_3.html">lab5-3</a></li>
                 <li><a href="lab5/lab5_4.html">lab5-4</a></li>
+                <li><a href="lab5/lab5_5.html">lab5-5</a></li>
             </ul>
         </nav>
 </body>
