--- a/index.html
+++ b/index.html
@@ -57,5 +57,11 @@
                 <li><a href="lab5/lab5_5.html">lab5-5</a></li>
             </ul>
         </nav>
+        <h2>Лабораторная 6</h2>
+        <nav>
+            <ul>
+                <li><a href="lab6/lab6_1.html">lab6-1</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
