--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <nav>
             <ul>
                 <li><a href="lab6/lab6_1.html">lab6-1</a></li>
+                <li><a href="lab6/lab6_2.html">lab6-2</a></li>
             </ul>
         </nav>
 </body>
