--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <ul>
                 <li><a href="lab6/lab6_1.html">lab6-1</a></li>
                 <li><a href="lab6/lab6_2.html">lab6-2</a></li>
+                <li><a href="lab6/lab6_3.html">lab6-3</a></li>
             </ul>
         </nav>
 </body>
