--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Веб</title>
 </head>
 <body>
-    <h1>Лабораторные работы</h1>
+    <h1>Лабораторные работы HTML</h1>
         <h2>Лабораторная 1</h2>
         <nav>
             <ul>
@@ -65,5 +65,9 @@
                 <li><a href="lab6/lab6_3.html">lab6-3</a></li>
             </ul>
         </nav>
+    <h1>Лабораторные работы JavaScript</h1>
+        <h2>Лабораторная 1</h2>
+            <a href="JavaScript/lab1/lab1.html">
+        
 </body>
 </html>
