--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </nav>
     <h1>Лабораторные работы JavaScript</h1>
         <h2>Лабораторная 1</h2>
-            <a href="JavaScript/lab1/lab1.html">
+            <a href="JavaScript/lab1/lab1.html">lab1</a>
         
 </body>
 </html>
