--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
         </nav>
     <h1>Лабораторные работы JavaScript</h1>
         <h2>Лабораторная 1</h2>
-            <a href="JavaScript/lab1/lab1.html">lab1</a>
-        
+        <ul>
+            <li><a href="JavaScript/lab1/lab1_1.html">lab1-1</a></li>
+            <li><a href="JavaScript/lab1/lab1_2.html">lab1-2</a></li>
+            <li><a href="JavaScript/lab1/lab1_3.html">lab1-3</a></li>
+            <li><a href="JavaScript/lab1/lab1_4.html">lab1-4</a></li>
+            <li><a href="JavaScript/lab1/lab1_5.html">lab1-5</a></li>
+        </ul>     
 </body>
 </html>
