--- a/JavaScript/lab1/lab1_4.html
+++ b/JavaScript/lab1/lab1_4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <script src="lab1_4.js"></script>
+    <script src="scripts/lab1_4.js"></script>
     <meta charset="UTF-8">
     <title>Лабораторная 1_4 JavaScript</title>
 </head>
