--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -20,7 +20,7 @@
   <div class="container">
     <header style="padding-top: 5px;">
       <div id="logo" style="float:left">
-        <img src="images/logo.png" width="40%" alt="logo">
+        <img src="images/logo.png" style="width: 40%;" alt="logo">
       </div>
       <div id="contacts" style="float:right">
         <i class="fa fa-mobile fa-lg" style="color: darkblue;"></i> +79992116066 |
@@ -56,7 +56,7 @@
       </div>
     </nav>
     <div id="header-bottom" style="position: relative;">
-      <img src="images/banner.jpg" width="100%" alt="banner">
+      <img src="images/banner.jpg" style="width: 100%;" alt="banner">
       <div id="bannertext" style="position:absolute; top:10%; width:100%; text-align:center; color:white;">
         <div class="hidden-xs">
           <h1 style="color:black; background-color: #e3d9b6;">Мы предлагаем вам<br />
@@ -76,20 +76,20 @@
         <p class="lead">Наши основные услуги</p>
         <hr />
         <div class="col-md-4">
-          <img src="images/sweet.jpg" width="100%" alt="sweet">
+          <img src="images/sweet.jpg" style="width: 100%;" alt="sweet">
           <h3>Готовка вкуснейших блюд</h3>
           <p> В кафе "Ароматный Дом" мы уделяем большое внимание качеству продуктов и профессиональной готовке блюд. Наш
             опытный шеф-повар использует только свежие, качественные ингредиенты для создания вкусных блюд.</p>
         </div>
         <div class="col-md-4">
-          <img src="images/atm.jpg" width="100%" alt="atm">
+          <img src="images/atm.jpg" style="width: 100%;" alt="atm">
           <h3>Приятная атмосфера</h3>
           <p>Мы стремимся создать уютную и приятную атмосферу для наших гостей, чтобы они могли наслаждаться не только
             вкусной едой, но и приятной обстановкой. Наш интерьер и дизайн кафе созданы таким образом, чтобы каждый
             посетитель чувствовал себя комфортно и уютно.</p>
         </div>
         <div class="col-md-4">
-          <img src="images/barista.jpg" width="100%" height="100%" alt="barista">
+          <img src="images/barista.jpg" style="width: 100%;" height="100%" alt="barista">
           <h3>Консультации от бариста</h3>
           <p>Наша команда профессиональных бариста всегда готова поделиться своими знаниями и опытом с нашими гостями.
             Мы рады предложить бесплатные консультации и советы по выбору кофе и других напитков, чтобы наши гости могли
@@ -172,7 +172,7 @@
                 <h3>Бизнес-ланч</h3>
               </li>
               <li class="list1_img" style="float:left; width: 75%; margin-left:1em;">
-                <img src="images/spec.jpg" class="img-responsive" width="100%" alt="bussines">
+                <img src="images/spec.jpg" class="img-responsive" style="width: 100%;" alt="bussines">
               </li>
               <div class="clearfix"> </div>
             </ul>
