--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -89,7 +89,7 @@
             посетитель чувствовал себя комфортно и уютно.</p>
         </div>
         <div class="col-md-4">
-          <img src="images/barista.jpg" style="width: 100%;" height="100%" alt="barista">
+          <img src="images/barista.jpg" style="width: 100%;" alt="barista">
           <h3>Консультации от бариста</h3>
           <p>Наша команда профессиональных бариста всегда готова поделиться своими знаниями и опытом с нашими гостями.
             Мы рады предложить бесплатные консультации и советы по выбору кофе и других напитков, чтобы наши гости могли
