--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -175,8 +175,7 @@
               </li>
               <div class="clearfix"> </div>
             </ul>
-              <ul style="list-style:none; margin:15px; padding:10px; box-shadow:0 0 5px #aaa;
-          background: #FFF; border-radius: 3px; color:black;">\
+              <ul style="list-style:none; margin:15px; padding:10px; box-shadow:0 0 5px #aaa; background: #FFF; border-radius: 3px; color:black;">\
                 <li class="list1_desc" style="float:left; width:20%; min-width:100px;">
                   <h3>Промокод: "Постоянный" на покупку от 2000 рублей</h3>
                 </li>
