--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -70,11 +70,53 @@
         <a class="btn btn-info btn-lg">Оформить заказ</a>
       </div>
     </div>
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Индикаторы карусели -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+    
+      <!-- Слайды карусели -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="images/kafe1.jpg" alt="Slide 1">
+          <div class="carousel-caption">
+            <h3>Кафе днём:</h3>
+            <p>Завтраки, обеды и свежие десерты в уютной атмосфере кафе "Ароматный дом". Отличное место для деловой встречи или приятного обеда с друзьями.</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/kafe2.jpg" alt="Slide 2">
+          <div class="carousel-caption">
+            <h3>Кафе вечером:</h3>
+            <p>Романтический ужин в кафе "Ароматный дом". Уютная атмосфера, приятная музыка и отличное меню - идеальное место для вечернего свидания или романтического ужина.</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="images/atm.jpg" alt="Slide 3" style="width:100%">
+          <div class="carousel-caption">
+            <h3>Внутренний интерьер:</h3>
+            <p>Интерьер кафе "Ароматный дом" - уютное место, где каждый найдет свое место. Отдохните в комфорте, насладитесь блюдами нашего шеф-повара и приятной атмосферой в компании друзей и близких.</p>
+          </div>
+        </div>
+      </div>
+    
+      <!-- Управление каруселью -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
     <div id="main">
       <div class="row" style="text-align:center;">
-        <h2>О компании</h2>
+        <h2>О нас</h2>
         <p class="lead">Наши основные услуги</p>
-        <hr />
+        <hr>
         <div class="col-md-4">
           <img src="images/sweet.jpg" style="width: 100%;" alt="sweet">
           <h3>Готовка вкуснейших блюд</h3>
@@ -101,7 +143,7 @@
       <div class="row" style="text-align:center; background-color: brown; color: black;">
         <h2>Лучшее из нашего меню</h2>
         <p class="lead">Наслаждайтесь уникальным вкусом.</p>
-        <hr />
+        <hr>
         <ul style="list-style:none; margin:15px; padding:10px; box-shadow:0 0 5px #aaa;
           background: #FFF; border-radius: 3px;">
           <li class="list1_img" style="float:left; width: 36%;">
@@ -155,7 +197,7 @@
     <div id="discount">
       <div class="row" style="text-align:center; background:brown; color:black;">
         <h2>Акции и скидки</h2>
-        <hr />
+        <hr>
           <ul style="list-style:none; margin:15px; padding:10px; box-shadow:0 0 5px #aaa;
           background: #FFF; border-radius: 3px; color:black;">
             <li class="list1_desc" style="float:left; width:20%; min-width:100px;">
