--- a/index.html
+++ b/index.html
@@ -1,87 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Веб</title>
 </head>
 
 <body>
-    <h1>Лабораторные работы HTML</h1>
-    <h2>Лабораторная 1</h2>
-    <nav>
-        <ul>
-            <li><a href="lab1/lab1_1.html">lab1-1</a></li>
-            <li><a href="lab1/lab1_2.html">lab1-2</a></li>
-            <li><a href="lab1/lab1_3/doc.html">lab1-3</a></li>
-            <li><a href="lab1/lab1_4.html">lab1-4</a></li>
-            <li><a href="lab1/lab1_5.html">lab1-5</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 2</h2>
-    <nav>
-        <ul>
-            <li><a href="lab2/lab2_1.html">lab2-1</a></li>
-            <li><a href="lab2/lab2_2.html">lab2-2</a></li>
-            <li><a href="lab2/lab2_3/index.html">lab2-3</a></li>
-            <li><a href="lab2/lab2_4.html">lab2-4</a></li>
-            <li><a href="lab2/lab2_5.html">lab2-5</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 3</h2>
-    <nav>
-        <ul>
-            <li><a href="lab3/lab3_1.html">lab3-1</a></li>
-            <li><a href="lab3/lab3_2.html">lab3-2</a></li>
-            <li><a href="lab3/lab3_reset-css.html">lab3-reset-css</a></li>
-            <li><a href="lab3/lab3_normalize-css.html">lab3-normalize-css</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 4</h2>
-    <nav>
-        <ul>
-            <li><a href="lab4/lab4_1.html">lab4-1</a></li>
-            <li><a href="lab4/lab4_2.html">lab4-2</a></li>
-            <li><a href="lab4/lab4_3.html">lab4-3</a></li>
-            <li><a href="lab4/lab4_4.html">lab4-4</a></li>
-            <li><a href="lab4/lab4_5.html">lab4-5</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 5</h2>
-    <nav>
-        <ul>
-            <li><a href="lab5/lab5_1.html">lab5-1</a></li>
-            <li><a href="lab5/lab5_2.html">lab5-2</a></li>
-            <li><a href="lab5/lab5_3.html">lab5-3</a></li>
-            <li><a href="lab5/lab5_4.html">lab5-4</a></li>
-            <li><a href="lab5/lab5_5.html">lab5-5</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 6</h2>
-    <nav>
-        <ul>
-            <li><a href="lab6/lab6_1.html">lab6-1</a></li>
-            <li><a href="lab6/lab6_2.html">lab6-2</a></li>
-            <li><a href="lab6/lab6_3.html">lab6-3</a></li>
-        </ul>
-    </nav>
-    <h2>Лабораторная 7</h2>
-    <nav>
-        <ul>
-            <li><a href="lab7/lab7.html">lab7</a></li>
-        </ul>
-    </nav>
-    <h1>Лабораторные работы JavaScript</h1>
-    <h2>Лабораторная 1</h2>
-    <ul>
-        <li><a href="JavaScript/lab1/lab1_1.html">lab1-1</a></li>
-        <li><a href="JavaScript/lab1/lab1_2.html">lab1-2</a></li>
-        <li><a href="JavaScript/lab1/lab1_3.html">lab1-3</a></li>
-        <li><a href="JavaScript/lab1/lab1_4.html">lab1-4</a></li>
-        <li><a href="JavaScript/lab1/lab1_5.html">lab1-5</a></li>
-    </ul>
+    <div id="labs">
+        <div id="lab_html">
+            <h1>Лабораторные работы HTML</h1>
+            <h2>Лабораторная 1</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab1/lab1_1.html">lab1-1</a></li>
+                    <li><a href="lab1/lab1_2.html">lab1-2</a></li>
+                    <li><a href="lab1/lab1_3/doc.html">lab1-3</a></li>
+                    <li><a href="lab1/lab1_4.html">lab1-4</a></li>
+                    <li><a href="lab1/lab1_5.html">lab1-5</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 2</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab2/lab2_1.html">lab2-1</a></li>
+                    <li><a href="lab2/lab2_2.html">lab2-2</a></li>
+                    <li><a href="lab2/lab2_3/index.html">lab2-3</a></li>
+                    <li><a href="lab2/lab2_4.html">lab2-4</a></li>
+                    <li><a href="lab2/lab2_5.html">lab2-5</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 3</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab3/lab3_1.html">lab3-1</a></li>
+                    <li><a href="lab3/lab3_2.html">lab3-2</a></li>
+                    <li><a href="lab3/lab3_reset-css.html">lab3-reset-css</a></li>
+                    <li><a href="lab3/lab3_normalize-css.html">lab3-normalize-css</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 4</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab4/lab4_1.html">lab4-1</a></li>
+                    <li><a href="lab4/lab4_2.html">lab4-2</a></li>
+                    <li><a href="lab4/lab4_3.html">lab4-3</a></li>
+                    <li><a href="lab4/lab4_4.html">lab4-4</a></li>
+                    <li><a href="lab4/lab4_5.html">lab4-5</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 5</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab5/lab5_1.html">lab5-1</a></li>
+                    <li><a href="lab5/lab5_2.html">lab5-2</a></li>
+                    <li><a href="lab5/lab5_3.html">lab5-3</a></li>
+                    <li><a href="lab5/lab5_4.html">lab5-4</a></li>
+                    <li><a href="lab5/lab5_5.html">lab5-5</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 6</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab6/lab6_1.html">lab6-1</a></li>
+                    <li><a href="lab6/lab6_2.html">lab6-2</a></li>
+                    <li><a href="lab6/lab6_3.html">lab6-3</a></li>
+                </ul>
+            </nav>
+            <h2>Лабораторная 7</h2>
+            <nav>
+                <ul>
+                    <li><a href="lab7/lab7.html">lab7</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="js_lab">
+            <h1>Лабораторные работы JavaScript</h1>
+            <h2>Лабораторная 1</h2>
+            <ul>
+                <li><a href="JavaScript/lab1/lab1_1.html">lab1-1</a></li>
+                <li><a href="JavaScript/lab1/lab1_2.html">lab1-2</a></li>
+                <li><a href="JavaScript/lab1/lab1_3.html">lab1-3</a></li>
+                <li><a href="JavaScript/lab1/lab1_4.html">lab1-4</a></li>
+                <li><a href="JavaScript/lab1/lab1_5.html">lab1-5</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
