--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                 <li><a href="JavaScript/lab1/lab1_4.html">lab1-4</a></li>
                 <li><a href="JavaScript/lab1/lab1_5.html">lab1-5</a></li>
             </ul>
+            <h2>Лабораторная 2</h2>
+            <ul>
+                <li><a href="JavaScript/lab2/lab2.html">lab2</a></li>
+            </ul>
         </div>
     </div>
 </body>
