--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <h2>Лабораторная 2</h2>
             <ul>
                 <li><a href="JavaScript/lab2/lab2.html">lab2</a></li>
+                <li><a href="JavaScript/lab2/lab2_check.html">lab2_check</a></li>
             </ul>
         </div>
     </div>
