--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwИспользование inline-block при построении колонок</title>
+    <title>cwsИспользование inline-block при построении колонок</title>
     <style type="text/css">
         div {
             display: inline-block;
@@ -25,7 +25,7 @@
             width: 600px;
         }
         #container {
-            min-width: 100%;
+            min-width: 0%;
         }
     </style>
 </head>
