--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwsИспользование inline-block при построении колонок</title>
+    <title>cwssИспользование inline-block при построении колонок</title>
     <style type="text/css">
         div {
             display: inline-block;
@@ -13,16 +13,19 @@
         #left {
             background: #ccf;
             width: 200px;
+            min-width: 0%;
         }
 
         #right {
             background: #fcc;
             width: 200px;
+            min-width: 0%;
         }
 
         #center {
             background: #cfc;
             width: 600px;
+            min-width: 0%;
         }
         #container {
             min-width: 0%;
