--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -23,7 +23,7 @@
         <img src="images/logo.png" style="width: 40%;" alt="logo">
       </div>
       <div id="contacts" style="float:right">
-        <i class="fa fa-mobile fa-lg" style="color: darkblue;"></i> +79992116066 |
+        <i class="fa fa-mobile-screen-button fa-lg" style="color: darkblue;"></i> +79992116066 |
         <i class="fa fa-envelope fa-lg" style="color: darkblue;"></i> info@aroma-house.com
         <a href="https://vk.com/"><i class="fab fa-vk" style="color:darkblue"></i></a>
       </div>
