--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -13,22 +13,22 @@
         #left {
             background: #ccf;
             width: 200px;
-            min-width: 0%;
+            min-width: 100px;
         }
 
         #right {
             background: #fcc;
             width: 200px;
-            min-width: 0%;
+            min-width: 100px;
         }
 
         #center {
             background: #cfc;
             width: 600px;
-            min-width: 0%;
+            min-width: 100px;
         }
         #container {
-            min-width: 0%;
+            min-width: 100px;
         }
     </style>
 </head>
