--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwssИспользование inline-block при построении колонок</title>
+    <title>cwsssИспользование inline-block при построении колонок</title>
     <style type="text/css">
         div {
             display: inline-block;
@@ -29,15 +29,15 @@
         }
         #container {
             min-width: 1000px;
+            font-size: 0
         }
     </style>
 </head>
 
 <body>
     <div id="container">
-        <div id="left">left<br>left<br>left<br>left<br>left</div>
-        
-        <div id="center">center text text text text text text text text text text text text text text text text text text
+        <div id="left">left<br>left<br>left<br>left<br>left
+        </div><div id="center">center text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text
@@ -50,8 +50,8 @@
             text text text text text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text
             text text text text text text text text text text text text text text text text text text text text text text
-            text text text text text text text text text text text text text text text</div>
-        <div id="right">right<br>right<br>right<br>right</div>
+            text text text text text text text text text text text text text text 
+        </div><div id="right">right<br>right<br>right<br>right</div>
     </div>
     </body>
 
