--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwsssИспользование inline-block при построении колонок</title>
+    <title>cwssssИспользование inline-block при построении колонок</title>
     <style type="text/css">
         div {
             display: inline-block;
@@ -26,7 +26,6 @@
         }
         #container {
             min-width: 1000px;
-            font-size: 0
         }
     </style>
 </head>
