--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwssssИспользование inline-block при построении колонок</title>
+    <title>Использование inline-block при построении колонок</title>
     <style type="text/css">
         div {
             display: inline-block;
