--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </ul>
             </nav>
         </div>
-        <div id="js_lab" style="visibility: visible;">
+        <div id="js_lab" style="visibility: hidden;">
             <h1>Лабораторные работы JavaScript</h1>
             <h2>Лабораторная 1</h2>
             <ul>
