--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 <li><a href="JavaScript/lab2/lab2.html">lab2</a></li>
                 <li><a href="JavaScript/lab2/lab2_check.html">lab2-check</a></li>
             </ul>
+            <h2>Лабораторная 3</h2>
+            <ul>
+                <li><a href="JavaScript/lab3/lab3.html">lab3</a></li>
+            </ul>
         </div>
     </div>
 </body>
