--- a/index.html
+++ b/index.html
@@ -90,12 +90,33 @@
             </ul>
             <h2>Лабораторная 2</h2>
             <ul>
-                <li><a href="JavaScript/lab2/lab2.html">lab2</a></li>
-                <li><a href="JavaScript/lab2/lab2_check.html">lab2-check</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab2/lab2.php">lab2</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab2/lab2_check.php">lab2-check</a></li>
             </ul>
             <h2>Лабораторная 3</h2>
             <ul>
-                <li><a href="JavaScript/lab3/lab3.html">lab3</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab3/lab3.php">lab3</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab3/lab3_check.php">lab3-check</a></li>
+            </ul>
+            <h2>Лабораторная 4</h2>
+            <ul>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab4/lab4.php">lab4</a></li>
+            </ul>
+            <h2>Лабораторная 5</h2>
+            <ul>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab5/lab5_1.php">lab5-1</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab5/lab5_2.php">lab5-2</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab5/lab5_3.php">lab5-3</a></li>
+            </ul>
+            <h2>Лабораторная 6</h2>
+            <ul>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab6/lab6_1.php">lab6-1</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab6/lab6_2.php">lab6-2</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab6/lab6_3.php">lab6-3</a></li>
+            </ul>
+            <h2>Лабораторная 7</h2>
+            <ul>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab7/lab7.php">lab7</a></li>
             </ul>
         </div>
     </div>
