--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
             <h1>Лабораторные работы JavaScript</h1>
             <h2>Лабораторная 1</h2>
             <ul>
-                <li><a href="JavaScript/lab1/lab1_1.html">lab1-1</a></li>
-                <li><a href="JavaScript/lab1/lab1_2.html">lab1-2</a></li>
-                <li><a href="JavaScript/lab1/lab1_3.html">lab1-3</a></li>
-                <li><a href="JavaScript/lab1/lab1_4.html">lab1-4</a></li>
-                <li><a href="JavaScript/lab1/lab1_5.html">lab1-5</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab1/lab1_1.html">lab1-1</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab1/lab1_2.html">lab1-2</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab1/lab1_3.html">lab1-3</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab1/lab1_4.html">lab1-4</a></li>
+                <li><a href="http://s98036ho.beget.tech/JavaScript/lab1/lab1_5.html">lab1-5</a></li>
             </ul>
             <h2>Лабораторная 2</h2>
             <ul>
