--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                     <li><a href="lab7/lab7.html">lab7</a></li>
                 </ul>
             </nav>
+            <h2>Figma вёрстка</h2>
+            <nav>
+                <ul>
+                    <li><a href="frontend/page.html">Вёрстка</a></li>
+                </ul>
+            </nav>
         </div>
         <div id="js_lab">
             <h1>Лабораторные работы JavaScript</h1>
