--- a/frontend/page.html
+++ b/frontend/page.html
@@ -286,7 +286,7 @@
             margin-top: 32px;
             display: flex;
             align-items: center;
-            background-image: url('icon background.svg');
+            background-image: url('icon-background.svg');
             justify-content: center;
         }
         h3 {
